--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,11 @@
 /*!
-Theme Name: Alcatraz Child
-Author: Carrie Forde, Braad Martin, Jordan Gonzales
-Description: A demo child theme for Alcatraz.
+Theme Name: Alcatraz Braad
+Author: Braad Martin
+Description: An awesome child theme for Alcatraz.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: alcatraz-child
+Text Domain: alcatraz-braad
 Template: alcatraz
 Tags:
 */
